# video-transcript-generator

./: README.md  SKILL.md  briefsummary.txt  pyproject.toml  research_methodology.md
scripts/: get_gdrive_video_transcript.py  get_local_video_transcript.py  get_youtube_transcript.py
